Security consts. CookieUtils to work with. Jwt props.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,7 @@ spring:
   data:
     mongodb:
       uri: 'mongodb://localhost:27017/amazon-agency'
+jwt:
+  secret: ultra-insecure-secret
+  access-token-expiration-seconds: '1440'
+  refresh-token-expiration-seconds: '86400'
