--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 			<version>5.4.1.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.12.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
