Enable needed cfg for mongoDB. CustomUserDetailsService to check if user exists.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   data:
     mongodb:
       uri: 'mongodb://localhost:27017/amazon-agency'
+      auto-index-creation: true
 jwt:
   secret: ultra-insecure-secret
   access-token-expiration-seconds: '1440'
