--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
 			<version>0.12.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.2.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
