--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,15 @@ spring:
     mongodb:
       uri: 'mongodb://localhost:27017/amazon-agency'
       auto-index-creation: true
+
 jwt:
   secret: ultra-insecure-secret
   access-token-expiration-seconds: '1440'
   refresh-token-expiration-seconds: '86400'
+
+logging:
+  level:
+    org:
+      springframework:
+        web: debug
+        security: trace
