--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<version>3.2.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>6.2.1</version>
+		</dependency>
 
 	</dependencies>
 
