--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       auto-index-creation: true
 
 jwt:
-  secret: ultra-insecure-secret
+  secret: w234ed5rf6gt7yh8ujs43d5fr6tg7yh8uj943sd5f6gh7
   access-token-expiration-seconds: '1440'
   refresh-token-expiration-seconds: '86400'
 
